# SA-WRQ

./: CMakeLists.txt  README.md
apps/: build_index.cpp  run_eval.cpp
cmake/: Options.cmake
configs/: base.json  cifar.json  sift.json
include/common/: config.h  dataset.h  result.h  serialization.h  status.h  timer.h  types.h
include/eval/: gt.h  metrics.h
include/index/: ivf.h  postings.h
include/monitor/: drift.h
include/quant/: rvq.h
include/search/: exact_search.h  hybrid_search.h  rerank.h
include/whitening/: whitening.h
src/common/: config.cpp  dataset.cpp  serialization.cpp
src/eval/: gt.cpp  metrics.cpp
src/index/: ivf.cpp  postings.cpp
src/monitor/: drift.cpp
src/quant/: rvq.cpp
src/search/: exact_search.cpp  hybrid_search.cpp  rerank.cpp
src/whitening/: whitening.cpp
tests/: test_interfaces.cpp  test_recall_smoke.cpp
